--- a/index.html
+++ b/index.html
@@ -12,89 +12,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body class="is-preload">
+	<p> hello world <p>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
-
-				<!-- Intro -->
-					<div id="intro">
-						<h1>Daniel's Portfolio</h1>
-						<p>A showcase of my projects and my abilities.</p>
-					</div>
-
-
-
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li class="active"><a href="index.html">Home Page</a></li>
-						</ul>
-						<ul class="icons">
-							<li><a href="##https://www.linkedin.com/in/danielcoffey1/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#https://github.com/danielCoffey1/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="#https://arcane-brook-57893.herokuapp.com/">Muralis</a></h2>
-									<p>Muralis is a platform for cataloguing and reviewing urban art and public graffiti pieces. Muralis back-end was produced in Ruby on Rails, with models for maintaining the state of our application. The Model-View-Controller paradigm was used to separate the information from the model and how it is presented to the user. This is largely mediated by the controller, which is communicating the two layers. The front-end of our project was utilized using React. React was used to handle the form submits and validations. A user couldn’t submit a mural without first completing the necessary forms in a correct manner. Devise Authentication was implemented so a visitor could securely create and account and submit a mural and review as a user. Murals were stored to AWS using Carrierwave. Toastify was additionally added on to notify the user that a review or mural upload has been submitted. Foundation was used on the front-end with custom CSS. This project was stored on a PostgreSQL database.The project was then deployed to Heroku.(Project was built collaboratively, utilizing skills to create a full-stack application.)
-									</p>
-								</header>
-								<a href="#https://arcane-brook-57893.herokuapp.com/" class="image main"><img src="images/muralis.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#https://github.com/MrBlooKangaroo/muralis" class="button large">GitHub Repo</a></li>
-								</ul>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="#https://vid-finder.netlify.com/">VidFinder<br /></a></h2>
-									</header>
-									<a href="#https://vid-finder.netlify.com/" class="image fit"><img src="images/vidfindr.jpg" alt="" /></a>
-									<p>VidFinder is a platform for searching for videos. VidFinder is a React produced application. React was used to handle the form submits. The search bar is used to set the state for the React components. Youtube’s API was integrated into React along with axios in order to provide the video information. Semantic UI with custom CSS was used as well.
-									</p>
-									<ul class="actions special">
-										<li><a href="#https://github.com/DanielCoffey1/VidFinder" class="button">Github Repo</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#https://warm-ravine-52582.herokuapp.com/">Redid<br /></a></h2>
-									</header>
-									<a href="#https://warm-ravine-52582.herokuapp.com/" class="image fit"><img src="images/redid.jpg" alt="" /></a>
-									<p>Redid is a platform for posting and commenting on links submitted by users. Redid back-end was produced in Ruby on Rails, with models for maintaining the state of our application. The Model-View-Controller paradigm was used to separate the information from the model and how it is presented to the user. This is largely mediated by the controller, which is communicating between the two layers. Devise Authentication was implemented so a visitor could securely create and account and submit a link and comment as a user. Bootstrap was used along with custom CSS. This project was stored on a PostgreSQL database.The project was then deployed to Heroku.
-									</p>
-									<ul class="actions special">
-										<li><a href="#https://github.com/DanielCoffey1/Redid" class="button">Github Repo</a></li>
-									</ul>
-								</article>
-								
-
-
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
+		
 	</body>
 </html>
